# shogun

./: .RData  .Rhistory  .clang-format  .clang_complete  .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  Base.h  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTIONS  CONTRIBUTIONS.md  COPYRIGHT  CTestConfig.cmake  Derived.h  FUNDING.yml  INSTALL  INSTALL.md  INTERFACES.md  Interface.h  KDE.cpp  KDTree.h  KDTreeSimple.cpp  KDTreeTest.cpp  LICENSE  LICENSE.md  LICENSE_SVMlight.md  Makefile  NEWS  README  README.cmake  README.md  README_cmake.md  README_data.md  README_developer.md  README_soname.md  appveyor.yml  commands  (+14 more)
doc/: ABOUT.md  CMakeLists.txt  Doxyfile  Doxyfile_cn  Doxyfile_cn.in  Doxyfile_en.in  DoxygenLayout.xml  INSTALL.md  Makefile  QUICKSTART.md  README  README.deps  RELEASE.md  insert_examples.pl  insert_examples.py  insert_examples_cn.pl  insert_examples_cn.py  plugins_readme.md  shogun_footer.html  tags_param.md
doc/OpenCV_docs/: Home.md  OpenCV-integration-examples.md  OpenCV_KNN_vs_Shogun_KNN.md  OpenCV_NN_vs_Shogun_NN.md  OpenCV_SVM_vs_Shogun_SVM.md  eigenfaces.cpp  fisherfaces.cpp
doc/Sklearn_docs/: SKLEARN_KRR _vs_SHOGUN_KRR copy.ipynb  SKLEARN_KRR _vs_SHOGUN_KRR.ipynb
doc/cookbook/: CMakeLists.txt  LICENSE  README.md  conf.py.in  requirements.txt
doc/data/: help_all.txt
doc/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile_cn.in  Doxyfile_en.in  DoxygenLayout.xml  README  footer.dpp  insert_examples.py
doc/ipython-notebooks/: link_checker.py  template.ipynb
doc/license/: LICENSE.md  LICENSE_SVMlight.md  LICENSE_tapkee.md  README_gpl.md
doc/manual/: Makefile  introduction.txt  manual.txt
doc/md/: CodingStyle.md  INSTALL.md  LICENSE_SVMlight.md  LICENSE_msufsort.md  QUICKSTART.md  README_cmake.md  README_developer.md
doc/pages/: Authors.mainpage  DeveloperTutorial.mainpage  Documentation.mainpage  EierlegendeWollmilchSauInterface.mainpage  Examples.mainpage  ExamplesLibshogun.mainpage  ExamplesModularCSharp.mainpage  ExamplesModularJava.mainpage  ExamplesModularLua.mainpage  ExamplesModularOctave.mainpage  ExamplesModularPython.mainpage  ExamplesModularR.mainpage  ExamplesModularRuby.mainpage  ExamplesStaticCmdline.mainpage  ExamplesStaticOctave.mainpage  ExamplesStaticPython.mainpage  ExamplesStaticR.mainpage  FAQ.mainpage  Installation.mainpage  Interfaces.mainpage  License.mainpage  Methods.mainpage  ModularInterfaces.mainpage  ModularTutorial.mainpage  R.txt  Screenshots.mainpage  StaticCommandLineInterface.mainpage  StaticInterfaces.mainpage  StaticOctaveInterface.mainpage  StaticPerlInterface.mainpage  StaticPythonInterface.mainpage  StaticRInterface.mainpage  StaticTutorial.mainpage  Tutorial.mainpage  authors  cmdline.txt  developerreadme.mainpage  faq.txt  installation.txt  license.txt  (+5 more)
doc/pages_cn/: DeveloperTutorial.mainpage  Documentation.mainpage  EierlegendeWollmilchSauInterface.mainpage  Examples.mainpage  ExamplesLibshogun.mainpage  ExamplesModularOctave.mainpage  ExamplesModularPython.mainpage  ExamplesModularR.mainpage  ExamplesStaticCmdline.mainpage  ExamplesStaticOctave.mainpage  ExamplesStaticPython.mainpage  ExamplesStaticR.mainpage  FAQ.mainpage  Installation.mainpage  Interfaces.mainpage  License.mainpage  Methods.mainpage  ModularTutorial.mainpage  Screenshots.mainpage  StaticCommandLineInterface.mainpage  StaticInterfaces.mainpage  StaticOctaveInterface.mainpage  StaticPerlInterface.mainpage  StaticRInterface.mainpage  StaticTutorial.mainpage  Tutorial.mainpage  shogun_footer.html
doc/pseudocode/: poim.txt
doc/readme/: ABOUT.md  BEGINNERS_GUIDE.md  DEVELOPING.md  EXAMPLES.md  INSTALL.md  INTERFACES.md  MISSION.md  NOTEBOOKS.md  README_linalg.md  plugins_readme.md
doc/sphinx/: CMakeLists.txt  Makefile  README.md  TODO  make.bat  sgexample.py
doc/user_manual/: manual.txt
doc/wikis/: cereal  cereal.md  linalg  linalg.md
examples/: CMakeLists.txt  Makefile  README  generate_documented.sh
examples/cmdline/: all_classifier.sg  all_clustering.sg  all_distance.sg  all_distribution.sg  all_kernels.sg  all_preproc.sg  all_regression.sg  check.sh  classifier_gmnpsvm.sg  classifier_gpbtsvm.sg  classifier_knn.sg  classifier_liblinear.sg  classifier_libsvm.sg  classifier_libsvmmulticlass.sg  classifier_libsvmoneclass.sg  classifier_mpd.sg  classifier_subgradientsvm.sg  classifier_svmlight.sg  classifier_svmlin.sg  classifier_svmocas.sg  clustering_hierarchical.sg  clustering_kmeans.sg  distance_braycurtis.sg  distance_canberra.sg  distance_canberraword.sg  distance_chebyshew.sg  distance_chisquare.sg  distance_cosine.sg  distance_euclidean.sg  distance_geodesic.sg  distance_hammingword.sg  distance_jensen.sg  distance_manhatten.sg  distance_manhattenword.sg  distance_minkowski.sg  distance_tanimoto.sg  distribution_linearhmm.sg  kernel_chi2.sg  kernel_combined.sg  kernel_commulongstring.sg  (+36 more)
examples/descriptions/: regression_gaussian_process_modular.txt
examples/documented/: kernel_pca~
examples/elwms/: foo.R  octave_to_python.m  python_to_octave.py  r_to_python.R
examples/example-generation/: .gitignore  CMakeLists.txt  README.md  ast.py  generate.py  parse.py  parser.py  parsetree.py  translate.py
examples/examples_v2/: .gitignore  CMakeLists.txt
examples/libshogun/: Makefile  README  basic_minimal.cpp  classifier_minimal_svm.cpp  classifier_mklmulticlass.cpp  dyn_int.cpp  gc_array.cpp  gnmpmkl.cpp  gnmpmkltester.cpp  indirect_object.cpp  kernel_gaussian.cpp  library_dyn_int.cpp  library_hash.cpp  library_indirect_object.cpp  minimal.cpp  minimal_svm.cpp  mklmulticlass.cpp  (+3 more)
src/: .authors  .cpuinfo.c  .doxy2swig.pl  .doxy2swig.py  .gdb  .generate_link_dependencies.pl  .generate_link_dependencies.py  .r-install.sh  .relpath.pl  .scrub_docstrings.pl  .scrub_docstrings.py  .version.sh  AUTHORS  CMakeLists.txt  CONTRIBUTIONS  ChangeLog  INSTALL  LICENSE  LICENSE.tapkee  Makefile  Makefile.deb  Makefile.env  Makefile.template  NEWS  README  README.data  README.developer  README.soname  TODO  compiling_for_opencl.sh  configure  d-bug.py  gf.m  processWrappers  processWrappers.py  script2  sg.m  testfile
(+13185 files in other folders)
